# backend/internal/repository/postgres/chat/model.go
@@ -1,0 +1,13 @@
+package pg_chat_repo
+
+import "time"
+
+type ChannelMessage struct {
+	id             string
+	channelID      string
+	authorID       string
+	authorUsername string
+	authorIsAdmin  bool
+	body           string
+	createdAt      time.Time
+}
